[package]
name = "blocklockcore"
version = "0.1.0"
edition = "2021"
description = "Created by David DeMayo with BlockLock"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[profile.release]
overflow-checks = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "1.18.23"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
