[package]
name = "blocklockcore"
version = "0.1.0"
edition = "2021"
description = "Created by David DeMayo with BlockLock"

[lib]
crate-type = ["cdylib", "lib"]
name = "blocklockcore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "=1.18.23"
